# aegir

./: .gitignore  README.md  pyproject.toml
.claude/skills/lesson-generator/: README.md  SKILL.md
.plans/: notebook-rewrite-curriculum-update.md
aegir/: __init__.py
archive/v1-week-based/: week-00-onboarding.md  week-02-embeddings.md  week-04-clustering.md  week-05-dynamical.md  week-06-variational.md  week-07-geometry.md  week-08-gdl.md
archive/v1-week-based/emergent-salience/: README.md  curriculum-brief.yaml  week-00-taste.md  week-01-primitives.md  week-02-thompson-salience.md  week-03-constitutional.md  week-04-dynamics.md  week-05-context.md  week-06-ship.md
notebooks/00-setup/: 00-environment-test.ipynb
notebooks/01-foundations/: 01a-numpy-pytorch-primer.ipynb  01b-linear-algebra-refresh.ipynb  01c-calculus-refresh.ipynb
notebooks/arc-0-probabilistic-foundations/module-0.1-taste-demo/: 0.1-taste-demo-core.ipynb
sources/: README.md  books.md  code.md  papers.md  videos.md
syllabus/: README.md  curriculum-brief.yaml  week-01-foundations.md  week-03-info-theory.md  week-09-integration.md  week-10-experiments.md
syllabus/arcs/: README.md  arc-0-probabilistic-foundations.md  arc-1-linear-algebra-calculus.md  arc-2-bayesian-inference-physics.md  arc-3-geometry-deep-learning.md  arc-4-research-frontier.md  arc-LLM-internals.md
wiki/: README.md  differential-geometry.md  dynamical-systems.md  embeddings.md  geometric-deep-learning.md  glossary.md  information-theory.md  variational-calculus.md
(+3 files in other folders)
