[project]
name = "aegir"
version = "0.1.0"
description = "Concept space and variational reasoning curriculum"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",

    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "ipywidgets>=8.1.0",

    # ML/Embeddings
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.35.0",

    # Clustering & Graphs
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.5",
    "networkx>=3.2.0",
    "scikit-learn>=1.3.0",
    "numba>=0.59.0",
    "llvmlite>=0.42.0",

    # Data
    "pandas>=2.1.0",

    # Utils
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aegir"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length handled separately
